fixed flickering pages whene router is transisting sequence table updates whene sequences are added

--- a/Client/src/css/styles.css
+++ b/Client/src/css/styles.css
@@ -47,7 +47,7 @@ body {
 
 .container {
     
-    margin-left: auto;
+    margin-left: 0;
     margin-right: auto;
 
     padding: 20px;
